# otus_basic_new

./: README.md  requirements-dev.txt
homework_03/: Dockerfile
homework_03/blog/: app.py  pyproject.toml
homework_05/: Dockerfile  app.py
homework_05/static/css/: bootstrap.css
homework_05/templates/: base.html
homework_05/templates/others/: about.html  index.html
homework_05/views/: index.py  others.py
homework_06/: Dockerfile  app.py  config.py  docker-compose.yml  prestart.sh
homework_06/migrations/versions/: 38312d3419ef_create_posts_table.py
homework_06/models/: __init__.py  post.py
homework_06/templates/: base.html
homework_06/templates/posts/: add.html  list.html
homework_06/views/: posts.py
