[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Vitaly Komarov <vitaliy932@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
